fixed tab menu button overlap

--- a/src/styles/Sidebar/_sidebar.scss
+++ b/src/styles/Sidebar/_sidebar.scss
@@ -11,8 +11,7 @@ $theme: #ff530d;
   background-color: $bg;
   min-height: 100vh;
   transition: all 500ms ease-in;
-  max-width: 250px;
-  min-width: 250px;
+  max-width: 260px;
 }
 
 .user {
@@ -32,6 +31,7 @@ $theme: #ff530d;
 
 .tabmenu-box {
   padding: 8px 24px;
+  width: 100%;
   color: darken($theme, 25%);
   cursor: pointer;
   &:hover {
